--- a/src/app/admin/add-edit-sale/add-edit-sale.component.css
+++ b/src/app/admin/add-edit-sale/add-edit-sale.component.css
@@ -14,12 +14,12 @@
 }
 
 
-#add_customer {
+/* #add_customer {
     position: relative;
     top: -5px;
     left: 2px;
     cursor: pointer;
-}
+} */
 
 /* .text_amount {
     margin-right: 830px;
@@ -31,16 +31,32 @@
     width: 40px;
     height: 40px;
     border-radius: 5px;
-    position: relative;
+    /* position: relative; */
     font-style: bold;
-    bottom: 64px;
-    left: 550px;
+    /* bottom: 64px; */
+    /* left: 550px; */
     line-height: 40px;
     border-radius: 5px;
 
 }
 
+#main_button {
+    width: 65px;
+    height: 40px;
+    margin: auto;
+}
+
 .add_btn {
+    width: 40px;
+    height: 35px;
+    margin: 0px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    word-spacing: 4px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+/* .add_btn {
     height: 40px;
     margin-right: 600px;
     margin-top: 10px;
@@ -48,14 +64,15 @@
     word-spacing: 4px;
     font-size: 15px;
     cursor: pointer;
-}
+} */
 
 .notice_text {
-    font-size: 13px;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+    font-size: 16px;
 }
 
-#formdate {
+/* #formdate {
     height: 54px;
     width: 200px;
     background: none;
@@ -64,6 +81,23 @@
     padding: 10px;
     float: left;
     margin-left: 334px;
+    border-radius: 3px 3px 0px 0px;
+    border-bottom: 1px solid black;
+} */
+.column_first {
+    width: 410px;
+    height: auto;
+    margin: auto;
+}
+
+#formdate {
+    width: 200px;
+    height: 54px;
+    background: none;
+    background: #ebebeb;
+    border: none;
+    padding: 10px;
+    margin-left: -210px;
     border-radius: 3px 3px 0px 0px;
     border-bottom: 1px solid black;
 }
@@ -77,20 +111,23 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
     box-sizing: border-box;
     color: #0d5e58;
+}
+
+.count_search .notice_text {
+    font-size: 16px;
 }
 
 .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
-    padding: 5px;
+    padding: 7px 2px 6px 7px;
     background-color: whitesmoke;
     position: relative;
     top: -5px;
     left: 0px;
-    text-align: left;
 }
 
 button {
@@ -128,16 +165,16 @@ ng-container a {
 }
 
 /* =============================================Button============================================================ */
-.submitbtn {
+/* .submitbtn {
     width: 100px;
     height: 35px;
     background-color: #0b4648;
     float: left;
-    /* margin-left: 585px; */
+    margin-left: 585px;
     margin-top: 10px;
-}
+} */
 
-.submitbtn p {
+/* .submitbtn p {
     width: 130px;
     height: 40px;
     border-radius: 5px;
@@ -149,8 +186,19 @@ ng-container a {
     word-spacing: 4px;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background-color: #0b4648;
+} */
+.btn_div .submitbtn {
+    width: 130px;
+    height: 35px;
+    background-color: #0b4648;
+    float: right;
+    margin: -45px 45px 0px 0px;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    cursor: pointer;
+    font-size: 16px;
+    word-spacing: 4px;
 }
-
 
 /* =========================================================================================================================== */
 .customer_btn {
@@ -193,7 +241,7 @@ a {
 }
 
 #table {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -202,7 +250,8 @@ a {
     color: white;
     background-color: #0f575a;
     height: 40px;
-    font-weight: bold;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 tr:nth-child(even) {
@@ -220,6 +269,209 @@ tr:hover {
     cursor: pointer;
 }
 
+.mat-row:hover>.mat-cell {
+    color: white
+}
+
+ng-container {
+    text-align: center;
+}
+
 tr.mat-row {
     text-align: left;
+}
+
+@media (min-width:1200px) and (max-width:2000px) {
+    .column {
+        width: 100%;
+        height: auto;
+        margin: auto;
+    }
+
+    .column mat-form-field {
+        width: 200px;
+    }
+
+    .column_1 mat-form-field {
+        width: 406px;
+        margin: 0px;
+        margin-right: 5px;
+    }
+}
+
+@media (min-width:768px) and (max-width:1200px) {
+    .column {
+        width: 100%;
+        height: auto;
+        margin: auto;
+    }
+
+    .column mat-form-field {
+        width: 200px;
+    }
+
+    .column_1 mat-form-field {
+        width: 406px;
+        margin: 0px;
+        margin-right: 5px;
+    }
+}
+
+@media(min-width:421px) and (max-width:767px) {
+    .content_area {
+        margin-top: 15px;
+    }
+
+    .column {
+        width: 100%;
+        height: auto;
+    }
+
+    .column mat-form-field {
+        width: 100%;
+        margin: 0px;
+    }
+
+    .column_1 mat-form-field {
+        width: 100%;
+        margin: 0px;
+    }
+
+
+    .cotainer {
+        margin-top: 10px;
+        overflow-x: hidden;
+    }
+
+    #table_area {
+        overflow-x: auto;
+    }
+
+    .notice_text {
+        font-size: 14px;
+    }
+
+    .count_search .notice_text {
+        font-size: 14px;
+    }
+
+    table th {
+        font-size: 14px;
+    }
+
+    table td {
+        font-size: 14px;
+    }
+
+    .column_first {
+        width: 100%;
+        height: auto;
+    }
+
+    #formdate {
+        width: 100%;
+        margin: 0px;
+    }
+
+    .btn_div .submitbtn {
+        width: 130px;
+        height: 35px;
+        position: relative;
+        bottom: -65px;
+        left: 33px;
+    }
+
+    .btn_div {
+        width: 150px;
+        height: 35px;
+        margin: auto;
+    }
+}
+
+@media(max-width:420px) {
+    .content_area {
+        margin-top: 15px;
+    }
+
+    .column {
+        width: 100%;
+        height: auto;
+    }
+
+    .column mat-form-field {
+        width: 100%;
+        margin: 0px;
+    }
+
+    .column_1 mat-form-field {
+        width: 100%;
+        margin: 0px;
+    }
+
+    .cotainer {
+        margin-top: 10px;
+        overflow-x: hidden;
+    }
+
+    #table_area {
+        overflow-x: auto;
+    }
+
+    .notice_text {
+        font-size: 13px;
+    }
+
+    .count_search .notice_text {
+        font-size: 13px;
+    }
+
+    table th {
+        font-size: 13px;
+    }
+
+    table td {
+        font-size: 13px;
+    }
+
+    th.mat-header-cell:first-of-type {
+        padding-left: 13px;
+    }
+
+    th.mat-header-cell:last-of-type {
+        padding-right: 0px;
+        width: 0%;
+    }
+
+    td.mat-cell:first-of-type {
+        padding-left: 20px;
+    }
+
+    td.mat-cell:last-of-type {
+        padding-right: 0px;
+        padding-left: 10px;
+    }
+
+    .column_first {
+        width: 100%;
+        height: auto;
+    }
+
+    #formdate {
+        width: 100%;
+        margin: 0px;
+    }
+
+    .btn_div .submitbtn {
+        width: 130px;
+        height: 35px;
+        position: relative;
+        bottom: -65px;
+        left: 33px;
+    }
+
+    .btn_div {
+        width: 150px;
+        height: 35px;
+        margin: auto;
+    }
 }
