--- a/src/app/admin/sale-cancel/sale-cancel.component.html
+++ b/src/app/admin/sale-cancel/sale-cancel.component.html
@@ -19,43 +19,22 @@
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="cust_name">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Customer Name</th>
                         <td class="data" mat-cell *matCellDef="let row">{{row.cust_name}}</td>
                     </ng-container>
                     <ng-container matColumnDef="sale_bill_no">
                         <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Bill number</th>
                         <td class="data" mat-cell *matCellDef="let row">{{row.sale_bill_no}}</td>
                     </ng-container>
-                    <ng-container matColumnDef="sale_total_amount">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product</th>
-                        <td class="data" mat-cell *matCellDef="let row">{{row.sale_total_amount}}</td>
-                    </ng-container>
                     <ng-container matColumnDef="sale_dues">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Basic amount</th>
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Gross Amount</th>
                         <td class="data" mat-cell *matCellDef="let row">{{row.sale_dues}}</td>
                     </ng-container>
-                    <ng-container matColumnDef="sale_gst">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Discount</th>
-                        <td class="data" mat-cell *matCellDef="let row">{{row.sale_gst}}</td>
+                    <ng-container matColumnDef="sale_cancel_reason">
+                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Cancel Reason</th>
+                        <td class="data" mat-cell *matCellDef="let row">{{row.sale_cancel_reason}}</td>
                     </ng-container>
-                    <ng-container matColumnDef="sale_discount">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
-                        <td class="data" mat-cell *matCellDef="let row">{{row.sale_discount}}</td>
-                    </ng-container>
-                    <ng-container matColumnDef="sale_Cancel_reason">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-heade>Paybill amount</th>
-                        <td class="data" mat-cell *matCellDef="let row">{{row.sale_Cancel_reason}}</td>
-                    </ng-container>
-                    <ng-container matColumnDef="sale_date">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Paid</th>
-                        <td class="data" mat-cell *matCellDef="let row">{{row.sale_date}}</td>
-                    </ng-container>
-                    <ng-container matColumnDef="Action">
-                        <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Dues</th>
-                        <td class="data" mat-cell *matCellDef="let row">
-                        </td>
-                    </ng-container>
-
+            
                     <ng-container matColumnDef="Date">
                         <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
                         <td class="data" mat-cell *matCellDef="let row">
