--- a/src/app/admin/sale-report/sale-report.component.css
+++ b/src/app/admin/sale-report/sale-report.component.css
@@ -5,7 +5,7 @@
 .view_notice {
     height: 40px;
     width: 100%;
-    background-color: #0a4547 ;
+    background-color: #0b4648;
     color: whitesmoke;
     display: flex;
     justify-content: space-between;
@@ -51,7 +51,8 @@ mat-form-field {
  
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+    font-style: italic;
+    font-size: 16px;}
 .search_area{
     width: 100%;
     height: 53px;
@@ -68,7 +69,7 @@ mat-icon {
 }
 
 #table {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -77,8 +78,8 @@ mat-icon {
     color: white;
     background-color: #0f575a;
     height: 40px;
-    font-weight: bold;
-    padding-left: 50px;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .example-full-width{
     height: 20px;
@@ -103,23 +104,18 @@ tr:hover {
     color: aliceblue;
     cursor: pointer;
 }
-
+.mat-row:hover>.mat-cell {
+    color: white
+}
 ng-container {
     text-align: center;
-}
-
-.cotainer {
-    margin-top: 2px;
-}
-
-.data:hover {
-    color: white;
 }
 .footer_amount{
     height:44px;
     width: 100%;
     background-color: #0f575a;
-    margin-top:454px ;    
+    position: fixed;
+    bottom: 0px;
 }
 .total{    
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
