--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
                         <span class="loginas">Login As : {{name}}</span>
                         <mat-icon class="user-icon" [matMenuTriggerFor]="menu">account_circle</mat-icon>
                         <mat-menu #menu="matMenu" class="myMenu">
-                            <!-- <a href="/"><button mat-menu-item  (click)="Logout()">logout</button></a>                                    -->
+                            <a href="/"><button mat-menu-item  (click)="Logout()">logout</button></a>                                   
                         </mat-menu>
                     </div>
                 </mat-toolbar>
