--- a/src/app/admin/cancel-bill/cancel-bill.component.html
+++ b/src/app/admin/cancel-bill/cancel-bill.component.html
@@ -5,7 +5,7 @@
 <div mat-dialog-content>
     <form [formGroup]="msgform" novalidate>
        
-        <h1> Bill No: {{editData.sale_bill_no}}</h1>
+        <h1> Bill No: {{bill_no}}</h1>
         <mat-form-field appearance="fill" class="textarea"  >
             <mat-label>Cancel Reason</mat-label>
             <textarea formControlName="msg" matInput
