--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -6,24 +6,26 @@
         <mat-card-content>
                 <mat-icon class="icon_1">account_circle</mat-icon>
 
+                <form [formGroup]="LoginForm">
                 <mat-form-field class="example-full-width">
                     <mat-label>Username</mat-label>
-                    <input matInput placeholder="Enter your name">
+                    <input matInput placeholder="Enter your name" formControlName="username">
                 </mat-form-field>
                 <mat-icon class="icon_2">lock</mat-icon>
                 <mat-form-field appearance="fill">
                     <mat-label>Enter your password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" placeholder="Enter your password">
+                    <input matInput [type]="hide ? 'password' : 'text'" placeholder="Enter your password" formControlName="password">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
                 </mat-form-field>
+            </form>
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button>Login</button>
+            <button mat-button (click)="onLogin()">Login</button>
         </mat-card-actions>
         <p>Forgot Password</p>
       </mat-card>
-      <div class="footer">Powered By :- <a href="https://www.greensoft.net.in/">Green Soft</a></div>
+      <div class="footer">Powered By :-  <a  href="https://www.greensoft.net.in/">Green Soft</a></div>
 </div>
