--- a/src/app/admin/purchase-cancel/purchase-cancel.component.html
+++ b/src/app/admin/purchase-cancel/purchase-cancel.component.html
@@ -19,77 +19,37 @@
           </ng-container>
 
           <ng-container matColumnDef="party_name">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Party</th>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.party_name}}</td>
           </ng-container>
-
-          <ng-container matColumnDef="purch_bill_no">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Bill no.</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.purch_bill_no}}</td>
+          <ng-container matColumnDef="cust_contact_no">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Customer Number</th>
+            <td class="data" mat-cell *matCellDef="let row">{{row.cust_contact_no}}</td>
           </ng-container>
+          <ng-container matColumnDef="purch_memo_no">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Memo No.</th>
+            <td class="data" mat-cell *matCellDef="let row">{{row.purch_memo_no}}</td>
+          </ng-container>
+
 
           <ng-container matColumnDef="basic_amount">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.purch_gross_amount}}</td>
           </ng-container>
 
-          <ng-container matColumnDef="cancel_reasion">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Cancel Reasion</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.cancel_reason}}</td>
-          </ng-container>
-
-          <!-- <ng-container matColumnDef="Action">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Discount</th>
-            <td class="data" mat-cell *matCellDef="let row">
-              <mat-icon (click)="edit_Purchase_cancel(row)">edit</mat-icon>
-            </td>
-          </ng-container>
-
-          
-          <ng-container matColumnDef="Gst">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
-            <td class="data" mat-cell *matCellDef="let row">
-              <mat-icon (click)="edit_Purchase_cancel(row)">edit</mat-icon>
-            </td>
-          </ng-container> -->
           <ng-container matColumnDef="Cancel_reasion">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Cancel reasion</th>
             <td class="data" mat-cell *matCellDef="let row">
               <mat-icon (click)="edit_Purchase_cancel(row)">edit</mat-icon>
             </td>
           </ng-container>
-          <ng-container matColumnDef="Date">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-            <td class="data" mat-cell *matCellDef="let row">
-              <mat-icon (click)="edit_Purchase_cancel(row)">edit</mat-icon>
-            </td>
-          </ng-container>
-
-          <!-- <ng-container matColumnDef="Gross amount">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Gross amount</th>
-            <td class="data" mat-cell *matCellDef="let row">
-              <mat-icon (click)="edit_Purchase_cancel(row)">edit</mat-icon>
-            </td>
-          </ng-container> -->
-
-
-          <!-- <ng-container matColumnDef="View_notice">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>View</th>
-            <td class="data" mat-cell *matCellDef="let row">
-              <mat-icon (click)="edit_Purchase_cancel(row)">View</mat-icon>
-            </td>
-          </ng-container> -->
-          <ng-container matColumnDef="purch_memo_no">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Memo No</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.purch_memo_no}}</td>
-          </ng-container>
 
           <ng-container matColumnDef="purch_date">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
             <td class="data" mat-cell *matCellDef="let row">
-              <mat-icon >{{row.purch_date}}</mat-icon>
+              <mat-icon>{{row.purch_date}}</mat-icon>
             </td>
-          </ng-container>      
+          </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
