--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -91,7 +91,7 @@
             </div>
         </a>
 
-        <a routerLink="/material-handover">
+        <a routerLink="/material_handover">
             <div class="thumbnail">
                 <mat-icon>gradient</mat-icon><br>
                 <span style="color:	rgb(255, 255, 255)"><b>{{total_mh}}</b></span><br>
