--- a/src/app/admin/add-edit-product/add-edit-product.component.html
+++ b/src/app/admin/add-edit-product/add-edit-product.component.html
@@ -47,7 +47,7 @@
 
             <mat-form-field appearance="fill">
                 <mat-label>Pages</mat-label>
-                <input formControlName="product_page" matInput placeholder="Product page">
+                <input formControlName="product_page" matInput placeholder="Product page" type="number">
             </mat-form-field>
 
         </div>
