--- a/src/app/admin/add-edit-purchase/add-edit-purchase.component.css
+++ b/src/app/admin/add-edit-purchase/add-edit-purchase.component.css
@@ -1,20 +1,29 @@
-/********************************************* party css style starting here ****************************************/
-
-
+#wrapper{
+    margin-top: 63px;
+}
 .view_notice {
+    /* background-color: #0b4648;
+    color: whitesmoke;
+    display: flex;
+    margin-top: 63px; */
+    height: 40px;
+    width: 100%;
     background-color: #0b4648;
     color: whitesmoke;
     display: flex;
-    margin-top: 63px;
+    justify-content: space-between;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .notice_text {
-    font-family: cambria;
-}
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+    font-size: 16px;}
 
 .puechase_link {
-    background-color: #05363c;
-    border-radius: 3px;
+    background-color: #0b4648;
+    border-radius: 5px;
     height: 37px;
     font-size: 12px;
     color: whitesmoke;
@@ -25,7 +34,7 @@
     background-color:#174b50;
 }
 
-.add_btn {
+/* .add_btn {
     height: 40px;
     width: 105px;
     margin-top: 5px;
@@ -33,6 +42,25 @@
     color: whitesmoke;
     cursor: pointer;
     font-family: cambria;
+} */
+#main_button {
+    width: 65px;
+    height: 40px;
+    margin: auto;
+}
+#button_area{
+    width: 120px;
+    height: 40px;
+    margin: auto;
+}
+.add_btn {
+    width: auto;
+    height: 35px;
+    margin: 0px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    word-spacing: 4px;
+    font-size: 15px;
+    cursor: pointer;
 }
 
 button {
@@ -51,41 +79,50 @@ mat-form-field {
     margin-right: 5px;
 }
 
-.textarea_box {
+/* .textarea_box {
     width: 64%;
-}
+} */
 
 .content_area {
     text-align: center;
-    margin-top: 10px;
-    height: 526px;
-
+    margin-top: 65px;
+    /* height: 526px; */
+    height: auto;
 }
 
 
-/********************************************* party css style Ending here ****************************************/
 
 
-/********************************************* item css style starting here ****************************************/
 
 .addButton {
-    background-color: #05363c;
+    /* background-color: #05363c;
     height: 25px;
     width: 25px;
     color: aliceblue;
     font-size: 25px;
     cursor: pointer;
-    margin-left: 10px;
+    margin-left: 10px; */
+    background-color: #05363c;
+    color: aliceblue;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    font-style: bold;
+    line-height: 40px;
+    border-radius: 5px;
 }
-
+.column_first {
+    width: 410px;
+    height: auto;
+    margin: auto;
+}
 .total_amount {
-    margin-left: 34px;
-    width: 64%;
+    /* margin-left: 34px; */
+    /* width: 64%; */
+    width: 410px;
 }
 
-/********************************************* item css style ending here ****************************************/
 
-/********************************************* Final css style starting here ****************************************/
 
 
 #billnobtn {
@@ -96,7 +133,7 @@ mat-form-field {
     margin-right: -8px;
 }
 
-.count_search {
+/* .count_search {
     height: 40px;
     width: auto;
     float: right;
@@ -105,7 +142,7 @@ mat-form-field {
     padding: 10px 10px 0px 10px;
     box-sizing: border-box;
     color: #0d5e58;
-}
+} */
 
 .date_box {
     width: 198px;
@@ -117,29 +154,98 @@ mat-form-field {
     padding: 16px 0px 0px 20px;
     height: 52px;
 }
-
+.upload_img_div{
+    width: 410px;
+    height: auto;
+    margin: auto;
+}
 .upload_img {
-    width: 64%;
+    width: 100%;
     color: gray;
     border-bottom: 1px solid gray;
     background-color: #ebebeb;
-    margin-left: 16.5em;
+    margin-bottom: 18px;
+    /* margin-left: 16.5em; */
 }
 
 .bill_uplaod {
+    float: left;
     font-size: 12px;
-    margin-right: 60em;
+    /* margin-right: 60em; */
 }
 
 .bill_img{
+    width: auto;
     border: none;
-    margin-right: 40em;
+    margin-left: -142px;
+    /* margin-right: 40em; */
 }
 
-/* ====================================================Media Queryss===================================================== */
+.count_search {
+    height: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 10px 0px 10px;
+    box-sizing: border-box;
+    color: #0d5e58;
+}
+
+.count_search .notice_text {
+    font-size: 16px;
+}
+
+.search input {
+    border-bottom: 1px solid #0a4547;
+    outline: none;
+    padding: 7px 2px 6px 7px;
+    background-color: whitesmoke;
+    position: relative;
+    top: -5px;
+    left: 0px;
+}
+
+#table {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.trth {
+    color: white;
+    background-color: #0f575a;
+    height: 40px;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+tr:nth-child(even) {
+    background-color: whitesmoke;
+    height: 35px;
+}
+
+tr:nth-child(odd) {
+    height: 35px;
+}
+
+tr:hover {
+    background-color: #0f575a;
+    color: aliceblue;
+    cursor: pointer;
+}
+
+.mat-row:hover>.mat-cell {
+    color: white
+}
+
+ng-container {
+    text-align: center;
+}
 
 
-@media(max-width: 420px) {
+
+
+/* @media(max-width: 420px) {
     .mat-form-field-infix {
         display: block;
         position: relative;
@@ -218,13 +324,12 @@ mat-form-field {
     .save_btn {
         margin-right: 210px;
     }
-}
+} */
 
 
 
 
-/* for table css starting here */
-.view_notice {
+/* .view_notice {
     height: 40px;
     width: 100%;
     background-color: #0b4648;
@@ -292,9 +397,212 @@ tr:hover {
 
 ng-container {
     text-align: center;
+} */
+
+
+
+@media (min-width:1200px) and (max-width:2000px) {
+    .column {
+        width: 100%;
+        height: auto;
+        margin: auto;
+    }
+
+    .column mat-form-field {
+        width: 200px;
+    }
+
+    .column_1 mat-form-field {
+        width: 406px;
+        margin: 0px;
+        margin-right: 5px;
+    }
+    .column_first {
+        width: 410px;
+        height: auto;
+        margin: auto;
+    }
 }
+@media (min-width:768px) and (max-width:1200px) {
+    .column {
+        width: 100%;
+        height: auto;
+        margin: auto;
+    }
 
+    .column mat-form-field {
+        width: 200px;
+    }
 
-/* =============================================Button Change================================================= */
+    .column_1 mat-form-field {
+        width: 406px;
+        margin: 0px;
+        margin-right: 5px;
+    }
+    .column_first {
+        width: 410px;
+        height: auto;
+        margin: auto;
+    }
+   }
 
-/* for table css ending here */
+@media(min-width:421px) and (max-width:767px) {
+    .content_area {
+        margin-top: 15px;
+    }
+
+    .column {
+        width: 100%;
+        height: auto;
+    }
+
+    .column mat-form-field {
+        width: 100%;
+        margin: 0px;
+    }
+
+    .column_1 mat-form-field {
+        width: 100%;
+        margin: 0px;
+    }
+    .cotainer {
+        margin-top: 10px;
+        overflow-x: hidden;
+    }
+
+    #table_area {
+        overflow-x: auto;
+    }
+    .column_first {
+        width: 100%;
+        height: auto;
+
+    }
+    .total_amount {
+        width: 100%;
+        margin: 0px;
+    }
+    .date_box {
+        width: 100%;
+    }
+    .upload_img_div{
+        width: 100%;
+        height: auto;
+        margin: 18px 0px 0px 0px;
+    }
+     .upload_img {
+        width: 100%;
+        color: gray;
+        border-bottom: 1px solid gray;
+        background-color: #ebebeb;
+        margin-bottom: 18px;
+    }
+    
+    .bill_uplaod {
+        float: left;
+        font-size: 12px;
+    }
+    
+    .bill_img{
+        width: auto;
+        border: none;
+    }
+}
+@media(max-width:420px) {
+    .content_area {
+        margin-top: 15px;
+    }
+
+    .column {
+        width: 100%;
+        height: auto;
+    }
+
+    .column mat-form-field {
+        width: 100%;
+        margin: 0px;
+    }
+
+    .column_1 mat-form-field {
+        width: 100%;
+        margin: 0px;
+    }
+
+    .cotainer {
+        margin-top: 10px;
+        overflow-x: hidden;
+    }
+
+    #table_area {
+        overflow-x: auto;
+    }
+
+    .notice_text {
+        font-size: 13px;
+    }
+
+    .count_search .notice_text {
+        font-size: 13px;
+    }
+
+    table th {
+        font-size: 13px;
+    }
+
+    table td {
+        font-size: 13px;
+    }
+
+    th.mat-header-cell:first-of-type {
+        padding-left: 13px;
+    }
+
+    th.mat-header-cell:last-of-type {
+        padding-right: 0px;
+        width: 0%;
+    }
+
+    td.mat-cell:first-of-type {
+        padding-left: 20px;
+    }
+
+    td.mat-cell:last-of-type {
+        padding-right: 0px;
+        padding-left: 10px;
+    }
+    .total_amount {
+        width: 100%;
+        margin: 0px;
+    }
+    .column_first {
+        width: 100%;
+        height: auto;
+    } 
+    .date_box {
+        width: 100%;
+    }
+    .upload_img_div{
+        width: 100%;
+        height: auto;
+        margin: 18px 0px 0px 0px;
+    }
+     .upload_img {
+        width: 100%;
+        color: gray;
+        border-bottom: 1px solid gray;
+        background-color: #ebebeb;
+        margin-bottom: 18px;
+    }
+    
+    .bill_uplaod {
+        float: left;
+        font-size: 12px;
+    }
+    
+    .bill_img{
+        width: auto;
+        border: none;
+        margin-left: -142px;
+    } 
+
+}
