--- a/src/app/admin/sidebar/sidebar.component.css
+++ b/src/app/admin/sidebar/sidebar.component.css
@@ -48,7 +48,7 @@
 
 .menu-button:focus {
     background-color: rgb(15, 108, 108);
-
+    box-shadow: 8px 8px 5px rgb(0 0 0 / 50%) inset;
 }
 
 #report_dropdown_item {
